fix: feedback-driven agent improvements — POM profiles, UI quirks, workspace awareness
- testara_init: replace flat failsafe with junit4 (default) + junit5 profiles matching
  the sample project (surefire-junit47, testara-reporter-plugin, testara-cucumber engine,
  excludeJUnit5Engines, jvm.options, maven-dependency-plugin for step-defs unpack)
- testara_init: Junit4RunnerTests simplified to match sample (classpath:features, no
  objectFactory/tags/snippets — matches ygrip/testara-example-ui-automation)
- testara_init: testara-junit5 moved to compile scope; lombok to provided scope
- testara_init: coordinatePrompt removes option_auto — agent must ask user for
  groupId/artifactId, no more default guessing
- McpServer: add projectRoot param to testara_run and testara_context tool definitions
  so agents can fix indexed-features=0 when MCP is launched outside the workspace
- TestaraUiSkill: unknown-page locator stubs use TODO markers + warn on write;
  removed hardcoded cart/inventory selectors in favour of generic stubs
- TestaraGuideSkill: concise extraction includes UI Runtime Quirks section headings
- generation-rules.md: new UI Runtime Quirks section (element name resolution,
  page context after UserAction, retry=0 always, parallel=false, projectRoot rule);
  NEVER add cucumber-junit-platform-engine rule; updated POM scope rules; quick
  guardrails reference quirks section and projectRoot applies to run/context tools